Compiling to Java 8; bumped major version given that Java 7 is no longer supported; switched build Java environment to OpenJDK 8 (#170)