@@ -7,7 +7,7 @@
 
   <groupId>org.milyn</groupId>
   <artifactId>smooks-parent</artifactId>
-  <version>1.7.2-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Milyn :: Smooks</name>
   <url>http://www.smooks.org</url>
@@ -920,7 +920,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.2</version>
+          <version>3.8.1</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -948,7 +952,7 @@
             <excludes>
               <exclude>**/Test*.java</exclude>
             </excludes>
-            <argLine>-Xms128m -Xmx256m -XX:MaxPermSize=128m</argLine>
+            <argLine>-Xms128m -Xmx256m</argLine>
           </configuration>
         </plugin>
         <plugin>
